--- a/src/templates/partials/events.hbs
+++ b/src/templates/partials/events.hbs
@@ -96,4 +96,4 @@
         </div>
     </div>
 
-    <a class="btn center" href="events/">More Events</a>
+    <a class="btn  btn-outline  center" href="events/">More Events</a>
