--- a/src/templates/partials/section--find-program.hbs
+++ b/src/templates/partials/section--find-program.hbs
@@ -1,16 +1,12 @@
 
-<div class="grid  grid--center">
+<div class="grid  grid--center  mb3">
 	<div class="grid-cell  u-large-4-5">
 		<div class="medium-grid-pad-1x">
 
-			<div class="grid  grid--center">
-				<div class="grid-cell u-medium-1-1">
-					<div class="medium-grid-pad-1x">
-						<h2 class="beta  mb1  center  fw300">Find your major or program</h2>
+
+						<h2 class="h1  mb1  center  fw450  titleBorder">Find your major or program</h2>
 						<p class="h4  mb2  mb3--medium  fw400">We offer more than 100 areas of study for undergrads, as well as programs for adult undergrad, graduate, and seminary students. Enter a career or area of interest to find and compare majors, programs, certificates, and licenses.</p>
-					</div>
-				</div>
-			</div>
+
 
 			<form id="find-program-form" class="form--find-program  mb2" action="https://www.bethel.edu/academics/program-search" method="GET">
 				<div class="search--program">
