--- a/src/templates/partials/section--request-info.hbs
+++ b/src/templates/partials/section--request-info.hbs
@@ -3,8 +3,8 @@
 		<div class="grid  grid--center  bkg--white">
 			<div class="grid-cell">
 				<div class="grid-pad-2x">
-					<h3 class="beta  pt1  center  fw300">Request information</h3>
-					<form class="form--request-info  validate-form  pt3" action="" method="post" >
+					<h3 class="alpha  pt1  center  fw500  titleBorder">Request information</h3>
+					<form class="form--request-info  validate-form  pv3" action="" method="post" >
 					<blockquote class="center">
 						<fieldset>
 							Hello, my <label class="form--request-info__label" for="user_name">name</label> is <input required="" name="user[firstName]" placeholder="First" id="user_firstName" value="" type="text" title="First name required">
@@ -23,7 +23,7 @@
 						</fieldset>
 					</blockquote>
 					<div class="form--request-info__error"></div>
-					<button id="form--request-info__submit" class="btn  btn-yellow  center  mt3" jtype="submit">Request info</button>
+					<button id="form--request-info__submit" class="btn  btn-outline  center  mt3" jtype="submit">Request info</button>
 					</form>
 					<div class='form--request-info--success' style="display:none">
 						<p style="color:#fff" class="center">Thanks for requesting information! Check your email, you should be hearing from us soon.</p>
