--- a/src/templates/pages/index.hbs
+++ b/src/templates/pages/index.hbs
@@ -52,7 +52,7 @@ body {
     /* border: 2px solid#ccc; */
     /* border-bottom: 12px solid #0069aa; */
     /* margin-right: 2em; */
-    border-left: 2px  solid #fff1be;
+    border-left: 2px  solid #ffe588;
     color: #667;
     /* padding: .5em 1em; */
     /* border-radius: 4px; */
@@ -79,6 +79,7 @@ body {
 .titleBorder {
     position: relative;
     padding: .75em 1em;
+    font-weight: 300;
 }
 
 .titleBorder::after {
@@ -353,11 +354,11 @@ body {
     </div>
 
         <!-- proof points -->
-    <section class="bkg--white  mv4  pv5">
-    <div class="inner">
-            <h2 class="h1  mb3  center  fw500 titleBorder">Bethel by the Numbers</h2>
+    <section class="bkg--white  mv4  pv6">
+    <div class="inner pt3">
+            <h2 class="h1  mb4  center  fw500 titleBorder">Bethel Academics by the Numbers</h2>
         
-    <div class="grid  proofPoints">
+    <div class="grid  proofPoints  pb4">
         <div class="grid-cell  proofPoint">
             <div class="ph2 mr2">
                 <!-- <img class="lazyload  pt1" alt="Market research" data-src="https://www.bethel.edu/undergrad/academics/real-experience/images/market-research.png" width="60"> -->
@@ -787,7 +788,7 @@ body {
     <div class="grid  mt0">
         <div class="grid-cell u-medium-1-2 pv6  lazyload" style="margin: 0; background-position: 60% 25%;background-size:cover;" data-bgset="https://cdn1.bethel.edu/resize/unsafe/400x0/smart/https://www.bethel.edu/_homepages/www/images/girl-laughing.jpg 400w, https://cdn1.bethel.edu/resize/unsafe/600x0/smart/https://www.bethel.edu/_homepages/www/images/girl-laughing.jpg 600w, https://cdn1.bethel.edu/resize/unsafe/800x0/smart/https://www.bethel.edu/_homepages/www/images/girl-laughing.jpg 800w, https://cdn1.bethel.edu/resize/unsafe/1000x0/smart/https://www.bethel.edu/_homepages/www/images/girl-laughing.jpg 1000w, https://cdn1.bethel.edu/resize/unsafe/1200x0/smart/https://www.bethel.edu/_homepages/www/images/girl-laughing.jpg 1200w, https://cdn1.bethel.edu/resize/unsafe/1400x0/smart/https://www.bethel.edu/_homepages/www/images/girl-laughing.jpg 1400w, https://cdn1.bethel.edu/resize/unsafe/1600x0/smart/https://www.bethel.edu/_homepages/www/images/girl-laughing.jpg 1600w" data-sizes="auto">
         </div>
-        <div class="grid-cell u-medium-1-2  pv6  bkg--white">
+        <div class="grid-cell u-medium-1-2  pv6">
             <div class="medium-grid-pad-2x ">
                 <div style="min-width: 300px; max-width: 500px; margin: 4em auto;">
                     <h2 class="alpha  mb2" >Apply Now</h2>
