--- a/src/templates/partials/section--request-info.hbs
+++ b/src/templates/partials/section--request-info.hbs
@@ -1,9 +1,9 @@
-<div class="sectionRequestInfo">
+<div class="sectionRequestInfo  bkg--white">
 	<div class="inner  pv6">
-		<div class="grid  grid--center  bkg--white">
+		<div class="grid  grid--center">
 			<div class="grid-cell">
 				<div class="grid-pad-2x">
-					<h3 class="alpha  pt1  center  fw500  titleBorder">Request information</h3>
+					<h3 class="alpha  pt1  center  fw500">Request information</h3>
 					<form class="form--request-info  validate-form  pv3" action="" method="post" >
 					<blockquote class="center">
 						<fieldset>
