border left tweak

--- a/src/templates/pages/index.hbs
+++ b/src/templates/pages/index.hbs
@@ -480,7 +480,7 @@ body {
 
 
 <!-- Experience  -->
-<section class="mt0 pb6"  style="border-left: 10px solid #b4e2ff;">
+<section class="mt0 pb6"  style="background:#f7fbff; border-left: 1em solid #b4e2ff;">
 
     <div class="attnHeader">
         <div class="inner">
@@ -576,7 +576,7 @@ body {
 </section>
 
 <!-- Faith -->
-<section class="mt0  pb3--medium  bkg--white"  style="border-left: 10px solid #ffc600;">
+<section class="mt0  pb3--medium  bkg--white"  style="border-left: 1em solid #ffc600;">
 
     <div class="attnHeader">
             <div class="inner ">
