--- a/src/css/base/variables.css
+++ b/src/css/base/variables.css
@@ -18,6 +18,7 @@ $bethel--yellow: #ffc600;
 $bethel--yellow--rgb: 255, 198, 0;
 
 $gotham: "Gotham A", "Gotham B", Helvetica, Arial, sans;
+$sentinel: "Sentinel A", "Sentinel B", Georgia, serif;
 
 $baseLineHeight: 1.5;
 $baseFontSize: 16px;
