--- a/src/templates/layouts/default.hbs
+++ b/src/templates/layouts/default.hbs
@@ -33,6 +33,7 @@
 
 	</div>
 
+
 <script>
     function loadJS(u) {var r = document.getElementsByTagName("script")[0], s = document.createElement("script"); s.src = u; r.parentNode.insertBefore(s, r); }
     if (!window.HTMLPictureElement) {
@@ -44,7 +45,7 @@
 
 	var cb = function() {
 		var l = document.createElement('link'); l.rel = 'stylesheet';
-		l.href = 'https://cloud.typography.com/6664852/692222/css/fonts.css';
+		l.href = '//cloud.typography.com/6664852/665108/css/fonts.css';
 		var h = document.getElementsByTagName('head')[0]; h.parentNode.insertBefore(l, h);
 	};
 	var raf = requestAnimationFrame || mozRequestAnimationFrame ||
